# smart-app-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smart_app_dev.db-shm  smart_app_dev.db-wal
adr/: 0001-record-architecture-decisions.md  0002-stack-choice.md
app/: main.py
app/config/: settings.py
app/core/: config.py  db.py  dependencies.py  middlewares.py  routers.py
app/engines/evidence/: models.py  router.py  schemas.py  service.py
app/engines/generation/: models.py  router.py  schemas.py  service.py
app/engines/ingestion/: models.py  router.py  schemas.py  service.py
app/engines/knowledge/: models.py  router.py  schemas.py  service.py
app/engines/learning_state/: models.py  router.py  schemas.py  service.py
app/modules/common/abstracts/: repository.py
app/modules/common/api/: healthz.py
app/modules/common/dtos/: response.py
app/modules/common/exceptions/: use_case_exception.py
app/modules/ingestion/: dtos.py
app/modules/ingestion/api/v1/: routes.py
app/modules/ingestion/models/: chapter.py
app/modules/ingestion/repositories/: chapter_repository.py
app/modules/ingestion/use_cases/: create_chapter.py  get_chapter.py
migrations/: README.md
scripts/: gabarito_example.json  handwriting_risk_test.py
smart_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
specs/: 00-product-vision.md  01-ingestion-engine.md  02-knowledge-engine.md  03-evidence-engine.md  04-learning-state-engine.md  05-generation-engine.md  _template.md
tasks/: TASK-000-teste-risco-manuscrito.md  TASK-001-ingestion-engine-text.md  _template.md
tests/: conftest.py  test_health.py
tests/ingestion/: test_ingestion_router.py
