[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "smart-app"
version = "0.0.1"
description = "Smart App — plataforma de pré-aprendizagem adaptativa"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tortoise-orm[asyncpg]>=0.21",
    "aerich>=0.7",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.aerich]
tortoise_orm = "app.core.db.TORTOISE_ORM"
location = "migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
